--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "linked data",
     "compression"
   ],
+  "type": "module",
   "main": "dist/main.js",
   "module": "main.js",
   "browser": {
@@ -76,8 +77,12 @@
     "karma-webpack": "^5.0.0",
     "mocha": "^10.0.0",
     "mocha-lcov-reporter": "^1.3.0",
+    "nyc": "^15.1.0",
     "rollup": "2.75.6",
     "webpack": "^5.73.0"
+  },
+  "resolutions": {
+    "karma-mocha/minimist": "1.2.6"
   },
   "c8": {
     "reporter": [
