--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@digitalbazaar/cborld",
-  "version": "4.2.1-0",
+  "version": "5.0.1-0",
   "description": "A CBOR-LD encoder/decoder for Javascript.",
   "license": "BSD-3-Clause",
   "author": {
@@ -22,6 +22,7 @@
     "linked data",
     "compression"
   ],
+  "type": "module",
   "main": "dist/main.js",
   "module": "main.js",
   "browser": {
@@ -29,58 +30,62 @@
     "./lib/util.js": "./lib/util-browser.js"
   },
   "engines": {
-    "node": ">=12"
+    "node": ">=14"
   },
   "scripts": {
-    "build": "rm -rf dist/ && rollup main.js --file dist/main.js --format cjs --sourcemap",
+    "build": "rm -rf dist/ && rollup --config rollup.config.js",
     "test": "npm run test-node",
-    "test-node": "cross-env NODE_ENV=test mocha -r esm --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
-    "test-karma": "karma start karma.conf.js",
-    "test-watch": "cross-env NODE_ENV=test mocha -r esm --watch --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
-    "coverage": "cross-env NODE_ENV=test nyc --reporter=lcov --reporter=text-summary npm run test-node",
-    "coverage-ci": "cross-env NODE_ENV=test nyc --reporter=lcovonly npm run test-node",
-    "coverage-report": "nyc report",
+    "test-node": "cross-env NODE_ENV=test mocha --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
+    "test-karma": "karma start karma.conf.cjs",
+    "test-watch": "cross-env NODE_ENV=test mocha --watch --preserve-symlinks -t 30000 -A -R ${REPORTER:-spec} tests/*.spec.js",
+    "coverage": "cross-env NODE_ENV=test c8 npm run test-node",
+    "coverage-ci": "cross-env NODE_ENV=test c8 --reporter=lcovonly --reporter=text-summary --reporter=text npm run test-node",
+    "coverage-report": "c8 report",
     "lint": "eslint ./lib ./tests"
   },
   "files": [
-    "lib",
+    "lib/**/*.js",
     "main.js",
     "dist/main.js",
     "dist/main.js.map",
     "index.d.ts"
   ],
   "dependencies": {
-    "base58-universal": "^1.0.0",
-    "cborg": "^1.2.0",
-    "esm": "^3.2.22",
-    "js-base64": "^3.6.0",
-    "uuid": "^8.3.1"
+    "base58-universal": "^2.0.0",
+    "cborg": "^1.9.4",
+    "js-base64": "^3.7.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "benchmark": "^2.1.4",
-    "chai": "^4.3.0",
-    "chai-bytes": "^0.1.2",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "@types/node": "^17.0.42",
+    "c8": "^7.11.3",
+    "chai": "^4.3.6",
     "chai-as-promised": "7.1.1",
-    "cross-env": "^6.0.3",
-    "eslint": "^7.20.0",
-    "eslint-config-digitalbazaar": "^2.5.0",
-    "eslint-plugin-jsdoc": "^30.7.13",
-    "karma": "^5.0.9",
+    "chai-bytes": "^0.1.2",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.17.0",
+    "eslint-config-digitalbazaar": "^3.0.0",
+    "eslint-plugin-jsdoc": "^39.3.2",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "karma": "^6.3.20",
     "karma-chai": "^0.1.0",
-    "karma-chrome-launcher": "^3.1.0",
+    "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^8.3.0",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-webpack": "^5.0.0",
+    "mocha": "^10.0.0",
     "mocha-lcov-reporter": "^1.3.0",
-    "nyc": "^15.0.0",
-    "rollup": "2.56.3",
-    "webpack": "^4.46.0"
+    "nyc": "^15.1.0",
+    "rollup": "2.75.6",
+    "webpack": "^5.73.0"
   },
-  "nyc": {
-    "exclude": [
-      "tests"
+  "c8": {
+    "reporter": [
+      "lcov",
+      "text-summary",
+      "text"
     ]
   }
 }
