--- a/package.json
+++ b/package.json
@@ -59,16 +59,16 @@
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^13.3.0",
     "@types/node": "^17.0.42",
-    "c8": "^7.11.3",
-    "chai": "^4.3.6",
+    "c8": "^8.0.1",
+    "chai": "^4.3.10",
     "chai-as-promised": "7.1.1",
     "chai-bytes": "^0.1.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.17.0",
+    "eslint": "^8.51.0",
     "eslint-config-digitalbazaar": "^3.0.0",
     "eslint-plugin-jsdoc": "^39.3.2",
     "eslint-plugin-unicorn": "^42.0.0",
-    "karma": "^6.3.20",
+    "karma": "^6.4.2",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^3.1.1",
     "karma-mocha": "^2.0.1",
@@ -79,7 +79,7 @@
     "mocha-lcov-reporter": "^1.3.0",
     "nyc": "^15.1.0",
     "rollup": "2.75.6",
-    "webpack": "^5.73.0"
+    "webpack": "^5.76.0"
   },
   "c8": {
     "reporter": [
@@ -87,5 +87,12 @@
       "text-summary",
       "text"
     ]
+  },
+  "resolutions": {
+    "chai/loupe/get-func-name": "2.0.2",
+    "karma/socket.io": "4.7.2",
+    "karma/ua-parser-js": "0.7.33",
+    "nyc/**/json5": "2.2.2",
+    "semver": "7.5.4"
   }
 }
